src/app/hourly-detail-display/hourly-detail-display.component.scss
.place {
  display: flex;
  padding: 20px 30px 0px;
  margin: auto;
  max-width: 90%;
  color: #ffffff;
  font-size: 200%;
  text-align: start;
}

.hourCards {
  display: flex;
  max-width: 90vw;
  background: linear-gradient(135deg, rgb(144, 194, 241), rgb(28, 77, 122));
  border-radius: 20px;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  color: #ffffff;
  flex: 1;
  margin: 15px auto 0px;
  padding: 20px;

  .day {
    display: block;
    font-size: x-large;
    align-self: center;
    min-width: 100px;
  }

  .scroll {
    display: flex;
    overflow-x: auto;
  }

  .hourly {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    background: rgb(64, 96, 126);
    outline: solid rgb(50, 58, 70);
    border-radius: 20px;
    padding: 20px;
    display: grid;
    grid-template-rows: repeat(7, auto);
    min-width: 205px;
    margin: 10px;

    p {
      display: flex;
      align-items: center;
      margin: auto;
      font-size: x-large;

      img {
        height: 42px;
        width: 42px;
        margin-right: 5px;
      }
    }

    span {
      place-self: center;

      .weatherIcon {
        height: 64px;
        width: 64px;
      }
    }
  }

  .idealHour {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
    transition: 0.3s;
    background: rgb(60, 129, 194);
    color: white;
    outline: solid rgb(178, 218, 241);
    border-radius: 20px;
    padding: 20px;
    display: grid;
    grid-template-rows: repeat(7, auto);
    min-width: 205px;
    margin: 10px;
  }
}

.weatherIcon {
  height: 64px;
  width: 64px;
}

img {
  height: 28px;
  width: 28px;
  margin: auto;
}

